--- a/pages/replies/replies.wxml
+++ b/pages/replies/replies.wxml
@@ -1,3 +1,4 @@
-<view class="container">
-  <text>讨论</text>
+<import src="/templates/list.wxml" />
+<view class="pages topics">
+  <template is="list" data="{{ topicList }}"/>
 </view>
